add works page lsh.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <canvas id="background-canvas"></canvas>
-        <div class="index" id="top">
+        <div class="index color-index" id="top">
             <div id="menuOverlay">
                 <div class="menu-content">
                     <div class="h-2">
@@ -37,33 +37,49 @@
 
                 <div class="body-1" id="works">
                     <div class="h-2">
-                        <div class="works">WORKS</div>
+                        <div class="works">RESEARCH</div>
                         <div class="divider-vertical"></div>
-                        <div class="div">作品</div>
+                        <div class="div">研究</div>
                     </div>
 
                     <div class="contents-1">
                         <a href="works_ttm.html">
                             <div class="contents-2">
                                 <img class="img-works" src="img/works_talkativemuseum.jpg" />
-                                <div class="h-3">Talkative Museum: <br />おしゃべりミュージアム</div>
-                                <div class="h-3">2024</div>
+                                <div class="h-4">Talkative Museum: <br />おしゃべりミュージアム</div>
+                                <div class="h-4">2024</div>
                             </div>
                         </a>
                         <div class="contents-2">
                             <img class="img-works" src="img/works_mem.jpg" />
-                            <div class="h-3">Memorium: 記憶の博物館</div>
-                            <div class="h-3">2023</div>
-                        </div>
-                        <div class="contents-2">
-                            <img class="img-works" src="img/works_ltwh.jpg" />
-                            <div class="h-3">Lets Talk with HANDS</div>
-                            <div class="h-3">2022</div>
+                            <div class="h-4">Memorium: 記憶の博物館</div>
+                            <div class="h-4">2023</div>
                         </div>
                         <div class="contents-2">
                             <img class="img-works" src="img/works_ide.jpg" />
-                            <div class="h-3">Identity by imaginative language</div>
-                            <div class="h-3">2023</div>
+                            <div class="h-4">Identity by imaginative language</div>
+                            <div class="h-4">2023</div>
+                        </div>
+                        <div class="contents-2">
+                            <img class="img-works" src="img/works_ltwh.jpg" />
+                            <div class="h-4">Lets Talk with HANDS</div>
+                            <div class="h-4">2022</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="body-1" id="works">
+                    <div class="h-2">
+                        <div class="works">WORKS</div>
+                        <div class="divider-vertical"></div>
+                        <div class="div">作品</div>
+                    </div>
+
+                    <div class="contents-1">
+                        <div class="contents-2">
+                            <img class="img-works" src="img/works_ide.jpg" />
+                            <div class="h-4">Identity by imaginative language</div>
+                            <div class="h-4">2023</div>
                         </div>
                     </div>
                 </div>
@@ -81,8 +97,8 @@
                     <div class="contents-1">
                         <div class="contents-2">
                             <img class="img-works" src="img/works_update.jpg" />
-                            <div class="h-3">Under construction</div>
-                            <div class="h-3">Soon</div>
+                            <div class="h-4">Under construction</div>
+                            <div class="h-4">Soon</div>
                         </div>
                     </div>
                 </div>
