updated lsh images

--- a/works_lsh.html
+++ b/works_lsh.html
@@ -97,6 +97,7 @@
                             greeting, good evening, sign language,
                             where）に対応しています。各動作は100点満点のスコアリングシステムで評価され、学習者は自身の進捗を具体的な数値で確認することができます。
                         </div>
+                        <img class="img-196" src="img/lsh/lsh_7.jpg" />
                         <img class="img-169" src="img/lsh/lsh_6.jpg" />
                     </div>
                 </div>
