added links to each work

--- a/index.html
+++ b/index.html
@@ -50,21 +50,20 @@
                                 <div class="h-4">2024</div>
                             </div>
                         </a>
-                        <div class="contents-2">
-                            <img class="img-works" src="img/works_mem.jpg" />
-                            <div class="h-4">Memorium: 記憶の博物館</div>
-                            <div class="h-4">2023</div>
-                        </div>
-                        <div class="contents-2">
-                            <img class="img-works" src="img/works_ide.jpg" />
-                            <div class="h-4">Identity by imaginative language</div>
-                            <div class="h-4">2023</div>
-                        </div>
-                        <div class="contents-2">
-                            <img class="img-works" src="img/works_ltwh.jpg" />
-                            <div class="h-4">Lets Talk with HANDS</div>
-                            <div class="h-4">2022</div>
-                        </div>
+                        <a href="works_mem.html">
+                            <div class="contents-2">
+                                <img class="img-works" src="img/works_mem.jpg" />
+                                <div class="h-4">Memorium: 記憶の博物館</div>
+                                <div class="h-4">2023</div>
+                            </div>
+                        </a>
+                        <a href="works_lsh.html">
+                            <div class="contents-2">
+                                <img class="img-works" src="img/works_ltwh.jpg" />
+                                <div class="h-4">Lets Talk with HANDS</div>
+                                <div class="h-4">2022</div>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
