modified back button on works page

--- a/works_lsh.html
+++ b/works_lsh.html
@@ -9,13 +9,9 @@
     <body>
         <div class="index color-lsh" id="top">
             <div class="all-works">
-                <div class="body-1">
-                    <a href="index.html">
-                        <div class="h-1">
-                            <div class="title">←TOKUNO KIHIRO</div>
-                        </div>
-                    </a>
-                </div>
+                <a href="index.html">
+                    <div class="title">←もどる</div>
+                </a>
                 <div class="body-1-works" id="works">
                     <div class="h-1">
                         <div>Let's speak with HANDS</div>
