--- a/works_mem.html
+++ b/works_mem.html
@@ -9,13 +9,10 @@
     <body>
         <div class="index color-mem" id="top">
             <div class="all-works">
-                <div class="body-1">
-                    <a href="index.html">
-                        <div class="h-1">
-                            <div class="title">←TOKUNO KIHIRO</div>
-                        </div>
-                    </a>
-                </div>
+                <a href="index.html">
+                    <div class="title">←もどる</div>
+                </a>
+
                 <div class="body-1-works" id="works">
                     <div class="h-1">
                         <div>Memorium: 記憶の博物館</div>
