updated  identity page、callout color

--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
                     </div>
 
                     <div class="contents-1">
-                        <div class="contents-2">
-                            <img class="img-works" src="img/works_ide.jpg" />
-                            <div class="h-4">Identity by imaginative language</div>
-                            <div class="h-4">2023</div>
-                        </div>
+                        <a href="works_ide.html">
+                            <div class="contents-2">
+                                <img class="img-works" src="img/works_ide.jpg" />
+                                <div class="h-4">Identity by imaginative language</div>
+                                <div class="h-4">2022</div>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
