--- a/works_ttm.html
+++ b/works_ttm.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div class="index color-mem" id="top">
+        <div class="index color-ttm" id="top">
             <div class="all-works">
                 <a href="index.html">
                     <div class="title">←もどる</div>
