--- a/works_lsh.html
+++ b/works_lsh.html
@@ -16,10 +16,10 @@
                     <div class="h-1">
                         <div>Let's speak with HANDS</div>
                     </div>
-                    <div class="contents">
+                    <div class="contents hidden">
                         <!-- <img class="img-large" src="img/lsh/lsh_top.jpg" /> -->
                         <!-- <div id="lottie-animation"></div> -->
-                        <video id="myVideo" autoplay muted>
+                        <video class="myvideo" id="myVideo" autoplay muted>
                             <source src="img/lsh/lsh.webm" type="video/webm" />
                         </video>
                     </div>
